--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>com.imaginarycode.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
     <version>1.0-SNAPSHOT</version>
 
