More refactoring performed.

--- a/pom.xml
+++ b/pom.xml
@@ -126,5 +126,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.12.2</version>
+        </dependency>
     </dependencies>
 </project>
