--- a/pom.xml
+++ b/pom.xml
@@ -126,9 +126,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.heartsavior</groupId>
+            <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.2.1.1</version>
+            <version>2.4.2</version>
         </dependency>
         <dependency>
             <groupId>net.md-5</groupId>
