--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ main: com.imaginarycode.minecraft.redisbungee.RedisBungee
 version: 0.2.6
 author: tuxed
 # This is used so that we can automagically override default BungeeCord behavior.
-softdepends: ["cmd_find", "cmd_list"]
+softDepends: ["cmd_find", "cmd_list"]
