Revert "A repo home at last!"
This reverts commit 6e90c0949b9b13f003eaa4f61f3763c70268dcdc.

--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,12 @@
 
     <distributionManagement>
         <repository>
-            <id>supaham-nexus</id>
-            <name>SupaHam - releases</name>
-            <url>http://repo.supaham.com/content/repositories/releases/</url>
+            <id>md_5-releases</id>
+            <url>http://repo.md-5.net/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>supaham-nexus</id>
-            <name>SupaHam - snapshots</name>
-            <url>http://repo.supaham.com/content/repositories/snapshots/</url>
+            <id>md_5-snapshots</id>
+            <url>http://repo.md-5.net/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
