--- a/src/main/resources/example_config.yml
+++ b/src/main/resources/example_config.yml
@@ -1,16 +1,12 @@
 # RedisBungee configuration file.
 # PLEASE READ THE WIKI: http://minecraft.imaginarycode.com/
 
-# The Redis server you use.
-# Get Redis from http://redis.io/
+# Redis server configuration. Learn more at http://redis.io.
 redis-server: 127.0.0.1
 redis-port: 6379
-# OPTIONAL: If your Redis server uses AUTH, set the password required.
+
+# If your Redis server requires a password, set it here.
 redis-password: ""
-# Maximum connections that will be maintained to the Redis server.
-# The default is an unlimited number of connections.
-# You may need to lower this value in some setups.
-max-redis-connections: -1
 
 # An identifier for this BungeeCord instance.
 server-id: iluvbungee
