--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,16 @@
                                     <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.commonspool
                                     </shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>com.squareup.okhttp</pattern>
+                                    <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.okhttp
+                                    </shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>okio</pattern>
+                                    <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.okio
+                                    </shadedPattern>
+                                </relocation>
                             </relocations>
                         </configuration>
                     </execution>
@@ -146,6 +156,12 @@
             <artifactId>lombok</artifactId>
             <version>1.12.2</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.2.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
