--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <groupId>com.imaginarycode.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
-    <version>0.3.6</version>
+    <version>0.3.7-SNAPSHOT</version>
 
     <repositories>
         <repository>
