--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.imaginarycode.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
-    <version>0.3.7</version>
+    <version>0.3.8-SNAPSHOT</version>
 
     <repositories>
         <repository>
