--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: RedisBungee
 main: com.imaginarycode.minecraft.redisbungee.RedisBungee
-version: 0.3.9
+version: 0.3.9-SNAPSHOT
 author: tuxed
 # This is used so that we can automagically override default BungeeCord behavior.
 softDepends: ["cmd_find", "cmd_list"]
