--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,9 @@
-name: RedisBungee
+name: ${project.name}
 main: com.imaginarycode.minecraft.redisbungee.RedisBungee
-version: 0.5
-author: chunkr
+version: ${project.version}
+author: Chunker and Govindas limework
+authors:
+  - chunkr
+  - Govindas Limework
 # This is used so that we can automatically override default BungeeCord behavior.
 softDepends: ["cmd_find", "cmd_list"]
