changed version to without snapshot due bug in nexus i think

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
 
     <groupId>com.imaginarycode.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
-    <version>0.6-SNAPSHOT</version>
+    <version>0.6</version>
+
+    <distributionManagement>
+        <repository>
+            <id>Limework-Maven-Public</id>
+            <url>http://mc.limework.net:8081/repository/public-maven/</url>
+        </repository>
+    </distributionManagement>
+
 
     <repositories>
         <repository>
