--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,14 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '8'
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.0.9
+      with:
+     # Artifact name
+       name: Redis_JAR
+     # Destination path
+       path: target/RedisBungee*
