--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,4 @@ jobs:
      # Artifact name
        name: Redis_JAR
      # Destination path
-       path: target/RedisBungee*
+       path: target/*
