--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Download a Build Artifact
-      uses: actions/download-artifact@v2.0.9
+      uses: actions/upload-artifact@v2.2.3
       with:
      # Artifact name
        name: Redis_JAR
      # Destination path
-       path: target/*
+       path: target/RedisBungee*
