--- a/src/main/resources/example_config.yml
+++ b/src/main/resources/example_config.yml
@@ -16,11 +16,12 @@ max-redis-connections: 8
 # you must disable this if redis version is under 6 you must disable this or connection wont work!!!
 useSSL: false
 
-
-# An identifier for this BungeeCord instance.
-server-id: test1
-# Should use random string? if enabled proxy id will be like this "test1-66cd2aeb-91f3-43a7-a106-e0307b098652"
+# An identifier for this BungeeCord instance. Will randomly generate if leaving it blank.
+server-id: "test1"
+# Should use random string? if this  is enabled the proxy id will be like this if server-id is test1: "test1-66cd2aeb-91f3-43a7-a106-e0307b098652"
+# or if id is limework-bungee it will be "limework-bungee-66cd2aeb-91f3-43a7-a106-e0307b098652"
 # this great for servers who run replicas in Kubernetes or any auto deploying replica service
+# and used for if proxy died in a kubernetes network and deleted then new proxy setup itself.
 use-random-id-string: false
 
 # Whether or not RedisBungee should install its version of regular BungeeCord commands.
