--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.imaginarycode.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
-    <version>0.6.4</version>
+    <version>0.6.5-SNAPSHOT</version>
 
 
     <repositories>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>3.6.1</version>
+            <version>3.6.3</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
