--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>RedisBungee-API</module>
         <module>RedisBungee-Bungee</module>
+        <module>RedisBungee-BungeeEvents</module>
     </modules>
 
 
