--- a/RedisBungee-API/pom.xml
+++ b/RedisBungee-API/pom.xml
@@ -15,15 +15,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.3.2</version>
                 <configuration>
                     <source>8</source>
+                    <reportOutputDirectory>../javadoc</reportOutputDirectory>
+                    <destDir>${project.name}</destDir>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
-
     </dependencies>
 
     <properties>
