--- a/RedisBungee-Bungee/pom.xml
+++ b/RedisBungee-Bungee/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>RedisBungee</artifactId>
         <groupId>com.imaginarycode.minecraft</groupId>
-        <version>0.7.0-SNAPSHOT</version>
+        <version>0.7.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -50,7 +50,6 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <!--
                             <relocations>
                                 <relocation>
                                     <pattern>redis.clients.jedis</pattern>
@@ -77,8 +76,22 @@
                                     <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.okio
                                     </shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>com.google</pattern>
+                                    <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.google
+                                    </shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.json</pattern>
+                                    <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.json
+                                    </shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.checkerframework</pattern>
+                                    <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.checkframework
+                                    </shadedPattern>
+                                </relocation>
                             </relocations>
-                            -->
                         </configuration>
                     </execution>
                 </executions>
