added Velocity support (NOT TESTED), it will not compile yet due config impl not done yet

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>RedisBungee-API</module>
         <module>RedisBungee-Bungee</module>
+        <module>RedisBungee-Velocity</module>
     </modules>
 
     <dependencies>
