--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,9 @@ name: RedisBungee Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ develop ]
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
+        java-version: '11'
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/upload-artifact@v2.2.3
       with:
      # Artifact name
-       name: Redis_JAR
+       name: RedisBungee-Bungee
      # Destination path
-       path: target/RedisBungee*
+       path: RedisBungee-Bungee/target/*
+
