--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,11 +23,20 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Download a Build Artifact
+    - name: Upload Bungee
       uses: actions/upload-artifact@v2.2.3
       with:
      # Artifact name
        name: RedisBungee-Bungee
      # Destination path
        path: RedisBungee-Bungee/target/*
-
+    - name: Upload Velocity
+      uses: actions/upload-artifact@v2.2.3
+      with:
+        name: RedisBungee-Velocity
+        path: RedisBungee-Velocity/target/*
+    - name: Upload API
+      uses: actions/upload-artifact@v2.2.3
+      with:
+        name: RedisBungee-API
+        path: RedisBungee-API/target/*
